# NLP

./: .gitignore  pyproject.toml
devlog/: 03-06-2025-ProvePipeline-Studio.md  DD-MM-YYYY-breve-descrizione-del-task.md
experiment/: convert.py  dataset.py  evaluation.py  graph_normalization.py  inference.py  kg.py  metrics.py  neo4j_store.py  pipeline.py  prompts.py  qwen3_reranker_transformers.py  scrape.py  semantic_search.py  visualize_graph.py
gold_dataset/: EMPULIAQA.csv  EMPULIAQA.json  EmPULIA-QA.csv  EmPULIA-QA.json
results/: results_nosource-default.json  results_nosource-default_.json  results_nosource-default_generation_evaluation_results.json  results_nosource-default_retrieval_evaluation_results.json  results_nosource-multiquery-extraction.json  results_nosource-multiquery.json  results_nosource-multiquery_retrieval_evaluation_results.json  results_source-default-extraction.json  results_source-default-extraction_retrieval_evaluation_results.json  results_source-default.json  results_source-default_generation_evaluation_results.json  results_source-default_retrieval_evaluation_results.json  results_source-multiquery-extraction.json  results_source-multiquery-extraction_retrieval_evaluation_results.json  results_source-multiquery.json  results_source-multiquery_retrieval_evaluation_results.json
