[project]
name = "nlp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "docling>=2.36.1",
    "dspy>=2.6.24",
    "faiss-cpu>=1.11.0",
    "google-genai>=1.23.0",
    "graph-retriever>=0.8.0",
    "hdbscan>=0.8.40",
    "hf-xet>=1.1.3",
    "langchain-text-splitters>=0.3.8",
    "neo4j>=5.28.1",
    "neo4j-graphrag[google]>=1.7.0",
    "numpy>=1.26.4",
    "prettyprint>=0.1.5",
    "pymupdf>=1.26.1",
    "rapidfuzz>=3.13.0",
    "rateguard>=0.1.3",
    "rich>=14.0.0",
    "ruff>=0.12.1",
    "scikit-learn>=1.7.0",
    "scrapegraphai>=1.53.0",
    "sentence-transformers>=5.0.0",
    "spacy>=3.8.7",
    "textual>=3.6.0",
    "transformers[sentencepiece]>=4.52.4",
]
